--- a/static/template/home.html
+++ b/static/template/home.html
@@ -1,10 +1,20 @@
 <html>
     <head>
         <title>Xblog</title>
+        <script text="javascript" src="/static/js/jquery-3.4.1.min.js"></script>
     </head>
 
     <body>
-        home template
+        <input></input> 
+        <button id="add_btn">ADD</button>
     </body>    
 
 </html>
+
+<script>
+$( document ).ready(function() {
+    $("#add_btn").click(function(){
+        alert("add something");
+    }); 
+});
+</script>
