--- a/static/template/home.html
+++ b/static/template/home.html
@@ -5,8 +5,11 @@
     </head>
 
     <body>
-        <input></input> 
+        <div align="center">
+        Name:<input id="name"></input><br> 
+        Email:<input id="email"></input><br> 
         <button id="add_btn">ADD</button>
+        </div>
     </body>    
 
 </html>
