--- a/static/template/home.html
+++ b/static/template/home.html
@@ -1,13 +1,24 @@
 <html>
     <head>
         <title>Xblog</title>
-        <script text="javascript" src="/static/js/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     </head>
 
     <body>
 
-        <div>Welcome to Xblog!</div>    
-    
+        <h1>Components</h1>
+
+        <div id="vue-app-one">
+            <h2>Vue app one</h2>
+            <greeting></greeting>
+        </div>   
+ 
+        <div id="vue-app-two">
+            <h2>Vue app two</h2>
+            <greeting></greeting>
+        </div>   
+ 
+        <script src="/static/js/app.js"></script>
     </body>    
 
 </html>
