--- a/static/template/home.html
+++ b/static/template/home.html
@@ -18,7 +18,7 @@
             <greeting></greeting>
         </div>   
  
-        <script src="/static/js/app.js"></script>
+        <script src="/static/js/home/home.js"></script>
     </body>    
 
 </html>
